# arm-control

./: README.md  acrobot_control.sh
Elfin/: README.md  run.sh
Elfin/elfin_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
Elfin/elfin_controller/config/: elfin_arm_control.yaml
Elfin/elfin_controller/launch/: elfin_controller.launch
Elfin/elfin_controller/src/: computed_torque_controller.cpp  gravity_comp_controller.cpp  time_delay_controller.cpp
Elfin/elfin_description/urdf/: elfin3.urdf.xacro
Elfin/elfin_gazebo/launch/: elfin3_empty_world.launch
acrobot_control/: CMakeLists.txt  package.xml
acrobot_control/config/: acrobot_control.yaml
acrobot_control/launch/: PID_Control1.perspective  PID_Control2.perspective  acrobot_control.launch  acrobot_control_python.launch  acrobot_rqt.launch
acrobot_control/scripts/: acrobot_control.py
acrobot_control/src/: Acrobot_PID.h  acrobot_control_PID.cpp
acrobot_description/: CMakeLists.txt  package.xml
acrobot_description/launch/: acrobot.rviz  acrobot_rviz.launch
acrobot_description/urdf/: acrobot.gazebo  acrobot.xacro
acrobot_gazebo/: CMakeLists.txt  package.xml
acrobot_gazebo/launch/: acrobot_world.launch
arm_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml  ros_control_plugins.xml
arm_controllers/cfg/: ComputedTorqueControllerCLIKParams.cfg  GravityCompControllerParams.cfg  PassivityControllerParams.cfg  PidParams.cfg  TimedelayControllerParams.cfg
arm_controllers/computed_torque_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
arm_controllers/computed_torque_controller/include/: computed_torque_controller.h
arm_controllers/computed_torque_controller/src/: computed_torque_controller.cpp
arm_controllers/gravity_comp_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
arm_controllers/gravity_comp_controller/include/: gravity_comp_controller.h
arm_controllers/gravity_comp_controller/src/: gravity_comp_controller.cpp
arm_controllers/include/: computed_torque_controller.h  gravity_comp_controller.h  hardware_interface_adapter.h  pid.h  time_delay_controller.h
arm_controllers/include/joint_trajectory_controller/: joint_trajectory_controller.h  joint_trajectory_controller_impl.h
arm_controllers/msg/: ControllerJointState.msg  TaskSpaceControllerJointState.msg
arm_controllers/src/: Controllers.cpp  adaptive_variable_impedance_controller.cpp  computed_torque_clik_controller.cpp  computed_torque_controller.cpp  computed_torque_controller_clik.cpp  gravity_comp_controller.cpp  passivity_controller.cpp  sliding_mode_controller.cpp  time_delay_controller.cpp
arm_controllers/time_delay_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
arm_controllers/time_delay_controller/cfg/: TimedelayControllerParams.cfg
arm_controllers/time_delay_controller/include/: time_delay_controller.h
arm_controllers/time_delay_controller/include/joint_trajectory_controller/: joint_trajectory_controller.h
arm_controllers/time_delay_controller/src/: time_delay_controller.cpp
elfin/: README.md
elfin/elfin_control/: CMakeLists.txt  package.xml
elfin/elfin_control/config/: adaptive_impedance_control.yaml  computed_torque_control.yaml  computed_torque_control_clik.yaml  computed_torque_controller.yaml  gravity_comp_control.yaml  gravity_comp_controller.yaml  passivity_control.yaml  sliding_mode_control.yaml  time_delay_control.yaml  time_delay_controller.yaml
elfin/elfin_control/launch/: adaptive_impedance_control.launch  computed_torque_controller.launch  gravity_comp_control.launch  gravity_comp_controller.launch  joint1_error.perspective  joint1_state.perspective  joint2_error.perspective  joint2_state.perspective  joint3_error.perspective  joint3_state.perspective  joint4_error.perspective  joint4_state.perspective  joint5_error.perspective  joint5_state.perspective  joint6_error.perspective  joint6_state.perspective  rqt_plot.launch  sliding_mode_control.launch  time_delay_control.launch  time_delay_controller.launch
elfin/elfin_description/urdf/: box.urdf.xacro  box_circle.urdf.xacro  elfin3.urdf.xacro  elfin3_experiment1.urdf.xacro  elfin3_moveit.urdf.xacro  elfin3_no_fric_no_joint_limit.urdf.xacro  elfin3_no_joint_limit.urdf.xacro  elfin_robot_experiment1.gazebo  elfin_robot_moveit.gazebo  elfin_transmission.xacro  elfin_transmission_experiment_1.xacro  elfin_transmission_no_fric_no_joint_limit.xacro
elfin/elfin_gazebo/config/: computed_torque_clik_controller.yaml  passivity_controller.yaml
elfin/elfin_gazebo/launch/: elfin3_empty_world.launch  elfin3_experiment1_world.launch  elfin3_experiment2_world.launch  elfin3_moveit_world.launch  elfin3_no_fric_no_joint_limit_world.launch  elfin3_no_joint_limit_world.launch  rqt_plot.launch
elfin/elfin_launch/: package.xml
elfin/elfin_launch/computed_torque_controller_launch/: computed_torque_controller.launch  moveit_planning_execution.launch
elfin/elfin_launch/gravity_comp_controller/: gravity_comp_controller.launch
elfin/elfin_launch/launch/: Joint1.txt  PlotTuning.launch  Plot_data.m  Plot_experiment.m  Plot_smc.m  elfin_adaptive_variable_impedance_control.launch  elfin_computed_torque_control.launch  elfin_computed_torque_control_clik.launch  elfin_gravity_comp_control.launch  elfin_passivity_control.launch  elfin_sliding_mode_control.launch  elfin_time_delay_control.launch  joint1_error.perspective  joint1_state.perspective  joint2_error.perspective  joint2_state.perspective  joint3_error.perspective  joint3_state.perspective  joint4_error.perspective  joint4_state.perspective  joint5_error.perspective  joint5_state.perspective  joint6_error.perspective  joint6_state.perspective  plot.launch
elfin/elfin_launch/time_delay_controller/: PlotTuning.launch  joint1_error.perspective  joint1_state.perspective  joint2_error.perspective  joint2_state.perspective  joint3_error.perspective  joint3_state.perspective  joint4_error.perspective  joint4_state.perspective  joint5_error.perspective  (+4 more)
elfin/elfin_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+26 files in other folders)
