<?xml version="1.0"?>
<package>
  <name>acrobot_control</name>
  <version>0.0.0</version>
  <description>acrobot_control package</description>

  <maintainer email="GangnamDynamics@googlegroups.com">GangnamDynamics</maintainer>

  <license>BSD</license>

  <url type="website">http://www.modulabs.co.kr/Dynamics</url>
  <url type="bugtracker"></url>
  <url type="repository">https://github.com/modulabs/GangnamDynamics</url>

  <author email="GangnamDynamics@googlegroups.com">GangnamDynamics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>eigen</run_depend>

  <export>
  </export>

</package>
