<?xml version="1.0"?>
<package>
  <name>acrobot_description</name>
  <version>0.0.0</version>
  <description>The acrobot_description package</description>

  <maintainer email="GangnamDynamics@googlegroups.com">GangnamDynamics</maintainer>

  <license>BSD</license>

  <url type="website">http://www.modulabs.co.kr/Dynamics</url>
  <url type="bugtracker"></url>
  <url type="repository">https://github.com/modulabs/GangnamDynamics</url>

  <author email="GangnamDynamics@googlegroups.com">GangnamDynamics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
