<package format="2">
  <name>arm_controllers</name>
  <description>Robot Arm Controllers</description>
  <version>0.13.2</version>

  <maintainer email="kyungmin5257@gmail.com">kyungmin</maintainer>
  <maintainer email="babchol@gmail.com">Hancheol Choi</maintainer>
  <maintainer email="kjy880527@gmail.com">Jungyeong kyungmin5257</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>actionlib</depend>
  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>

  <test_depend>rostest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
