<?xml version="1.0"?>
<package>
  <name>elfin_controller</name>
  <version>0.0.2</version>
  <description>The elfin_controller package</description>

  <maintainer email="kyungmin5257@gmail.com">kyungmin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>

   <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>

</package>
